# openapi/compiled.yaml
@@ -29,35 +29,33 @@ components:
               items:
                 type: object
                 properties:
-                  value:
+                  y_value:
                     type: number
-                  time:
-                    type: string
-                    format: date-time
+                  x_value:
+                    type: number
                   lower_bound:
                     type: number
                   upper_bound:
                     type: number
                 required:
-                  - value
-                  - time
+                  - y_value
+                  - x_value
                   - lower_bound
                   - upper_bound
             predicted_next_data:
               type: object
               properties:
-                value:
+                y_value:
                   type: number
-                time:
-                  type: string
-                  format: date-time
+                x_value:
+                  type: number
                 lower_bound:
                   type: number
                 upper_bound:
                   type: number
               required:
-                - value
-                - time
+                - y_value
+                - x_value
                 - lower_bound
                 - upper_bound
           required:
@@ -68,25 +66,25 @@ components:
       example:
         response:
           predicted_data:
-            - value: 0.1
-              time: '2020-01-01T00:00:01Z'
+            - y_value: 0.1
+              x_value: 0
               lower_bound: 0.1
               upper_bound: 0.1
-            - value: 0.2
-              time: '2020-01-01T00:00:02Z'
+            - y_value: 0.2
+              x_value: 1
               lower_bound: 0.2
               upper_bound: 0.2
-            - value: 0.3
-              time: '2020-01-01T00:00:03Z'
+            - y_value: 0.3
+              x_value: 2
               lower_bound: 0.3
               upper_bound: 0.3
-            - value: 0.4
-              time: '2020-01-01T00:00:04Z'
+            - y_value: 0.4
+              x_value: 3
               lower_bound: 0.4
               upper_bound: 0.4
           predicted_next_data:
-            value: 0.5
-            time: '2020-01-01T00:00:05Z'
+            y_value: 0.5
+            x_value: 4
             lower_bound: 0.5
             upper_bound: 0.5
   securitySchemes:
